DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Question_Image__c/fields/TIMBASURVEYS__Above_question__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Above_question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Above question</label>
    <type>Checkbox</type>
</CustomField>