DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Question_Image__c/fields/TIMBASURVEYS__Alt_text__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Alt_text__c</fullName>
    <label>Alternative text</label>
    <type>TextArea</type>
</CustomField>