DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Question_Image__c/fields/TIMBASURVEYS__Width__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Width__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Width</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>